<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.pdfconduit</groupId>
    <artifactId>pdf-utils</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>pdf-utils-core</module>
        <module>pdf-utils-desktop</module>
        <module>pdf-utils-web</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <pdfbox.version>3.0.4</pdfbox.version>
        <javafx.version>21.0.6</javafx.version>
        <picocli.version>4.7.6</picocli.version>
        <junit.version>5.11.4</junit.version>
        <twelvemonkeys.version>3.12.0</twelvemonkeys.version>
        <gson.version>2.11.0</gson.version>
        <commonmark.version>0.24.0</commonmark.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox</artifactId>
                <version>${pdfbox.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-base</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>
            <!-- Pure-Java WebP decoder, registered via ImageIO ServiceLoader -->
            <dependency>
                <groupId>com.twelvemonkeys.imageio</groupId>
                <artifactId>imageio-webp</artifactId>
                <version>${twelvemonkeys.version}</version>
            </dependency>
            <!-- JSON (used to persist pipelines) -->
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <!-- Pure-Java Markdown → HTML (CommonMark + GFM tables), for .md/.markdown to PDF -->
            <dependency>
                <groupId>org.commonmark</groupId>
                <artifactId>commonmark</artifactId>
                <version>${commonmark.version}</version>
            </dependency>
            <dependency>
                <groupId>org.commonmark</groupId>
                <artifactId>commonmark-ext-gfm-tables</artifactId>
                <version>${commonmark.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <!--
          Opt-in CVE scanning via OWASP dependency-check (S11).

          Deliberately NOT part of the default build: the first run downloads
          the full NVD vulnerability database, which is slow and best served by
          an NVD API key. Run explicitly with:

              mvn -Psecurity-scan verify

          Reports (HTML + JSON) land in each module's target/ directory; the
          aggregate report is under the root target/. Findings at or above the
          configured CVSS threshold fail the build. Accepted risks / false
          positives are suppressed via owasp-suppressions.xml at repo root.
        -->
        <profile>
            <id>security-scan</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.owasp</groupId>
                        <artifactId>dependency-check-maven</artifactId>
                        <version>10.0.4</version>
                        <configuration>
                            <!-- Fail the build on High/Critical CVEs. -->
                            <failBuildOnCVSS>7</failBuildOnCVSS>
                            <formats>
                                <format>HTML</format>
                                <format>JSON</format>
                            </formats>
                            <suppressionFiles>
                                <suppressionFile>${maven.multiModuleProjectDirectory}/owasp-suppressions.xml</suppressionFile>
                            </suppressionFiles>
                            <!-- Skip test-scope deps; they don't ship. -->
                            <skipTestScope>true</skipTestScope>
                        </configuration>
                        <executions>
                            <execution>
                                <id>owasp-cve-check</id>
                                <phase>verify</phase>
                                <goals>
                                    <!-- aggregate scans all reactor modules in one report -->
                                    <goal>aggregate</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>